src.1/objects/Salesforce_Project__c.object
<CustomObject>
    <label>Salesforce Project</label>
    <nameField>
        <label>Salesforce Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Salesforce Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Actual_Completion_Date__c</fullName>
        <label>Actual Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Hours__c</fullName>
        <label>Actual Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apex_Classes__c</fullName>
        <label>Apex Classes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Estimated_Completion_Date__c</fullName>
        <label>Estimated Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Hours__c</fullName>
        <label>Estimated Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flows__c</fullName>
        <label>Flows</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>New_Updated_Fields__c</fullName>
        <label>New/Updated Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <label>Next Steps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Metadata__c</fullName>
        <label>Other Metadata</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Process_Builders__c</fullName>
        <label>Process Builders</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <label>Project Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Stakeholders__c</fullName>
        <label>Stakeholders</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>CS</fullName>
                </value>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1. Backlog</fullName>
                </value>
                <value>
                    <fullName>1.5. Next Up</fullName>
                </value>
                <value>
                    <fullName>2. In Development</fullName>
                </value>
                <value>
                    <fullName>3. On Hold</fullName>
                </value>
                <value>
                    <fullName>4. Review/Testing</fullName>
                </value>
                <value>
                    <fullName>5. Ready for Deploy</fullName>
                </value>
                <value>
                    <fullName>6. Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Feature</fullName>
                </value>
                <value>
                    <fullName>Feature Update</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>Bug</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Validation_Rules__c</fullName>
        <label>Validation Rules</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Visualforce_Pages__c</fullName>
        <label>Visualforce Pages</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Waiting_On_Blockers__c</fullName>
        <label>Waiting On/Blockers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Workflow_Rules_Actions__c</fullName>
        <label>Workflow Rules &amp; Actions</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Priority__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Next_Steps__c</columns>
        <columns>Waiting_On_Blockers__c</columns>
        <columns>Estimated_Hours__c</columns>
        <columns>Actual_Hours__c</columns>
        <columns>Estimated_Completion_Date__c</columns>
        <columns>Actual_Completion_Date__c</columns>
        <columns>Project_Description__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>